Add DB Entities, Context and Initialized primary data.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ bin
 CompanyEmployees/CompanyEmployees/obj
 CompanyEmployees/Contracts/obj
 CompanyEmployees/LoggerService/obj
+CompanyEmployees/Entities/obj
