--- a/CompanyEmployees/CompanyEmployees/appsettings.json
+++ b/CompanyEmployees/CompanyEmployees/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "server=Dell\\SQLEXPRESS2016; database=CompanyEmployees; Integrated Security=true"
+  },
   "AllowedHosts": "*"
 }
