added Repository Pattern

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ CompanyEmployees/CompanyEmployees/obj
 CompanyEmployees/Contracts/obj
 CompanyEmployees/LoggerService/obj
 CompanyEmployees/Entities/obj
+CompanyEmployees/Repository/obj
+
