--- a/CompanyEmployees/CompanyEmployees/nlog.config
+++ b/CompanyEmployees/CompanyEmployees/nlog.config
@@ -3,11 +3,11 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
       autoReload="true" 
       internalLogLevel="Trace" 
-      internalLogFile="C:\Repository\GitRepos\WebApiDotNetCore3.0\CompanyEmployees\internallogs\internallog.txt">
+      internalLogFile="F:\Repositories\GitRepos\WebApiDotNetCore3.0\CompanyEmployees\internallogs\internallog.txt">
   <targets>
     <target name="logfile" 
             xsi:type="File" 
-            fileName="C:\Repository\GitRepos\WebApiDotNetCore3.0\CompanyEmployees\logs\${shortdate}_logfile.txt" 
+            fileName="F:\Repositories\GitRepos\WebApiDotNetCore3.0\CompanyEmployees\logs\${shortdate}_logfile.txt" 
             layout="${longdate} ${level:uppercase=true} ${message}"/>
   </targets>
   <rules>
