--- a/CompanyEmployees/CompanyEmployees/appsettings.json
+++ b/CompanyEmployees/CompanyEmployees/appsettings.json
@@ -10,5 +10,10 @@
   "ConnectionStrings": {
     "sqlConnection": "server=Dell\\SQLEXPRESS2016; database=CompanyEmployees; Integrated Security=true"
   },
+  "JwtSettings": {
+    "validIssuer": "CodeMazeAPI",
+    "validAudience": "https://localhost:44368",
+    "expires": "5"
+  },
   "AllowedHosts": "*"
 }
