GetEmployeeForCompany Unit Tests

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,5 @@ CompanyEmployees/Contracts/obj
 CompanyEmployees/LoggerService/obj
 CompanyEmployees/Entities/obj
 CompanyEmployees/Repository/obj
+CompanyEmployees/CompanyEmployeesTests/obj
 
