--- a/.github/workflows/BackendBuild.yml
+++ b/.github/workflows/BackendBuild.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore CompanyEmployees/CompanyEmployees/CompanyEmployees.csproj
+      run: dotnet restore CompanyEmployees/CompanyEmployees.sln
     - name: Build
       run: dotnet build --no-restore
     - name: Test
