--- a/.github/workflows/BackendBuild.yml
+++ b/.github/workflows/BackendBuild.yml
@@ -19,7 +19,7 @@ jobs:
         dotnet-version: 5.0.x
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ./CompanyEmployees
+      working-directory: ./WebApiDotNetCore3.0
     - name: Build
       run: dotnet build --no-restore
     - name: Test
