--- a/.github/workflows/backendbuild.yml
+++ b/.github/workflows/backendbuild.yml
@@ -28,10 +28,10 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: Install dependencies
-      run: dotnet restore WebApiDotNetCore3.0/CompanyEmployees/CompanyEmployees.csproj
+      run: dotnet restore
       
     - name: Build
-      run: dotnet build WebApiDotNetCore3.0/CompanyEmployees/CompanyEmployees.csproj --configuration Release --no-restore
+      run: dotnet build --configuration Release --no-restore
       
 #name: .NET
 #on:
